--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^3.5.3",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
+    "vue-property-decorator": "^8.2.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.0",
     "webpack-cli": "^3.3.6",
