--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-toast-xs",
-  "version": "0.0.2",
-  "main": "/dist/vue-toast-x.js",
+  "version": "0.0.4",
+  "main": "dist/vue-toast-x.js",
   "scripts": {
     "build": "webpack --config build/webpack.build.config.js",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
