--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-toast-xs",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "main": "dist/vue-toast-x.js",
   "scripts": {
     "build": "webpack --config build/webpack.build.config.js",
@@ -9,9 +9,14 @@
     "release": "npm run build && npm run demo-build && npm publish"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
